[package]
name = "turbo-octo-happiness"
version = "0.1.0"
authors = ["Simon Martin <smartin@scottlogic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse_mt = "0.6"           # A higher-level FUSE filesystem library with multi-threading and inode->path translation.
libc = "0.2"             # Raw FFI bindings to platform libraries like libc.
log = "0.4"               # A lightweight logging facade for Rust
env_logger = "0.10"
walkdir = "2.3"           # Recursively walk a directory.
magic = "0.13"            # libmagic bindings
# Date and time library for Rust
chrono = { version = "0.4", features=["std"] }
# A simple to use, efficient, and full-featured Command Line Argument Parser
clap = { version = "3.1.6", features = ["derive"] }